--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~47.0.3",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
+    "hermes-engine-darwin": "^0.4.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
